vieles geändert und korrigiert :)

--- a/Vorlesungen/vl_04.tex
+++ b/Vorlesungen/vl_04.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../gesamt.tex
+
 \section{Differentiation}
 \begin{Definition}{
 	Sei $f: D \left( f \right) \subseteq \mathbb{R} \rightarrow \mathbb{R}$ 
