--- a/Vorlesungen/vl_07.tex
+++ b/Vorlesungen/vl_07.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../gesamt.tex
+
 \begin{Satz}[verallgemeinerter Mittelwertsatz]{
 	\label{satz_9}
 	Seien $f,g : [a,b] \rightarrow \mathbb{R}$ stetig und auf ganz 
