--- a/Vorlesungen/vl_09.tex
+++ b/Vorlesungen/vl_09.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../gesamt.tex
+
 \begin{Definition}{
 	Ist $f: I \rightarrow \mathbb{R}$ beliebig oft differenzierbar, so definieren 
 	wir die Taylorreihe am Entwicklungspunkt $\alpha \in I$.
