--- a/Vorlesungen/vl_10.tex
+++ b/Vorlesungen/vl_10.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../gesamt.tex
+
 \begin{Satz}{\label{kap_10_satz18}
 	Sei $f: [a,b] \rightarrow \mathbb{R}$ beschränkt. Dann ist 
 	$f \in \mathcal{R}_{[a,b]}$ genau dann, wenn für jedes $\epsilon > 0$ eine 
