--- a/Vorlesungen/vl_11.tex
+++ b/Vorlesungen/vl_11.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../gesamt.tex
+
 \begin{Korollar}{
 	Ist $f:[a,b] \rightarrow \mathbb{R}$ stetig, beziehungsweise monoton, beziehungsweise 
 	besitzt $f$ höchstens endlich viele Unstetigkeitsstellen und ist beschränkt, so ist 
