--- a/Vorlesungen/vl_16.tex
+++ b/Vorlesungen/vl_16.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../gesamt.tex
+
 \todo{Kennzeichnung als Einschub - Anfang}
 \begin{Bemerkung}{
 	Sei $I \subseteq \mathbb{R}$ ein Intervall und $\mathbb{K} = \mathbb{C}$ oder
