--- a/Vorlesungen/vl_17.tex
+++ b/Vorlesungen/vl_17.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../gesamt.tex
+
 	Wir werden uns bei der Behandlung inhomogener linearer Differentialgleichungen 
 	mit konstanten Koeffizienten auf spezielle Inhomogenitäten der Form
 	\begin{align*}
@@ -90,21 +92,22 @@ eigentliche nr war 10} und Satz~\ref{vl_14_satz_1} \todo{ref prüfen} kennen wir
 	der Differentialgleichung $P \left( \frac{\mathrm{d}}{\mathrm{dt}}\right) 
 	x = t$.
 }\end{Beispiel}
+
 \cleardoublepage
 \section{Folgen und Reihen von Funktionen}
-Im Folgenden sei $\mathbb{K} = \mathbb{R}$ beziehungsweise $\mathbb{K} = \mathbb{C}$. Sei $D \subseteq K$ eine nicht leere Menge, dann bezeichnen wir mit $\mathbb{K}^D $ die Menge aller Funktionen von $D$ nach $\mathbb{K}$. \\
+Im Folgenden sei $\mathbb{K} = \mathbb{R}$ beziehungsweise $\mathbb{K} = \mathbb{C}$. Sei $D \subseteq K$ eine nicht leere Menge, dann bezeichnen wir mit $\mathbb{K}^D $ die Menge aller Funktionen von $D$ nach $\mathbb{K}$.
+
 Eine \emph{Folge} von Funktionen in $\mathbb{K}^D$ ist eine Abbildung von $\mathbb{N}$ nach $\mathbb{K}^D$, wobei wir das Bild von $n \in \mathbb{N}$ mit 
 $f_n$ bezeichnen.
 
 \begin{Definition}{
 	Sei $D \subseteq \mathbb{K}$ und $(f_n)_{n \in \mathbb{N}}$ eine Folge von 
-	Funktionen \\
-	$f_n : D \rightarrow \mathbb{K}$. Wir sagen, $(f_n)$ \emph{konvergiert 
+	Funktionen $f_n : D \rightarrow \mathbb{K}$. Wir sagen, $(f_n)$ \highl[Konvergenz!punktweise]{konvergiert 
 	Punktweise} gegen $f:D \rightarrow \mathbb{K}$, falls für alle $x \in D$ gilt:
 	\begin{align*}
 		\lim \limits_{n \rightarrow \infty}{f_n(x) =f(x)}
 	\end{align*}
-	Analog sagen wir $\sum_{n\geq 1} f_n$ \emph{konvergiert punktweise} gegen 
+	Analog sagen wir $\sum_{n\geq 1} f_n$ \highl[Konvergenz!punktweise]{konvergiert punktweise} gegen 
 	$f: D \rightarrow \mathbb{K}$, falls:
 	\begin{align*}
 		\sum_{n = 1}^{\infty} f_n(x) = f(x) \text{ } (x \in D)
