--- a/Vorlesungen/vl_19.tex
+++ b/Vorlesungen/vl_19.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../gesamt.tex
+
 \textcolor{red}{Konsultation zur Prüfung : Freitag 20.07.2018, 
 ab $9^{\underline{00}}$ Uhr, SR 384 CZ 3}
 
