--- a/Vorlesungen/vl_20.tex
+++ b/Vorlesungen/vl_20.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../gesamt.tex
+
 \begin{Definition}{%2
 	Sei $(X,d)$ ein metrischer Raum. Eine Folge $(x_n)$ in $X$ heißt 
 	\emph{konvergent gegen} $x \in X$, wenn gilt:
@@ -39,7 +41,7 @@
 		d(x,y) = \lim\limits_{n \rightarrow \infty} d(x,y) \leq 
 		\lim\limits_{n \rightarrow \infty} d(x,x_n) + d(x_n,y) = 0
 	\end{align*}
-	Mit \ref{vl_19_stp_1}, aus der Definition der Metrik, folgt $x = y$.
+	Mit \ref{def:metrik:1}, aus der Definition der Metrik, folgt $x = y$.
 \end{proof}
 
 \begin{Beispiel}{
