--- a/Vorlesungen/vl_07.tex
+++ b/Vorlesungen/vl_07.tex
@@ -171,7 +171,7 @@
 	  	\hspace*{5mm}$f|_{[\xi, \xi + \delta)}$ ist streng monoton fallend.
 \end{proof}
 
-\begin{Satz}[Regel von l'Hospital]{
+\begin{Satz}[Regel von l'Hospital]{\label{regel_von_hospital}
 	Seien $f,g: (a,b) \rightarrow \mathbb{R}$ mit
 	\begin{align*}
 		-\infty \leq a < b \leq \infty
