--- a/Vorlesungen/vl_08.tex
+++ b/Vorlesungen/vl_08.tex
@@ -54,7 +54,7 @@
 	\end{align*}
 }\end{Bemerkung}
 
-\begin{Satz}[Satz von Taylor (mit Lagrange-Restglied)]{
+\begin{Satz}[Satz von Taylor (mit Lagrange-Restglied)]{\label{satz_von_taylor}
 	Sei $f: [a,b] \rightarrow \mathbb{R},$ $n \in \mathbb{N}$ und 
 	$f$ $(n-1)-mal$ stetig differenzierbar $($auf $[a,b])$ und 
 	$n-mal$ differenzierbar auf $(a,b)$. Seien $\alpha \neq \beta$ 
