--- a/Vorlesungen/vl_12.tex
+++ b/Vorlesungen/vl_12.tex
@@ -12,7 +12,7 @@
 	\end{align*}
 }\end{Bemerkung}
 
-\begin{Satz}{\label{vl_12_satz_01}
+\begin{Satz}[Hauptsatz der Differential- und Integralrechnung]{\label{vl_12_satz_01}
 	Sei $f \in \mathcal{R}_{[a,b]}$. Für $ a \leq x \leq b$ setze man 
 	\begin{align*}
 		F(x) = \int_a^x f(t) \dd{t}
