--- a/gesamt.tex
+++ b/gesamt.tex
@@ -15,7 +15,7 @@
 \usepackage{cases}
 \input{Diverses/mathe.tex}
 
-\author{Merle Gänßinger}
+%\author{Merle Gänßinger}
 
 \usepackage{amsthm} 
 %\usepackage[standard]{ntheorem}                            % Theorem-Umgebung
@@ -92,6 +92,8 @@
 \cleardoublepage
 \tableofcontents
 \cleardoublepage
+\input{klausurbemerkungen}
+\cleardoublepage
 \input{Vorlesungen/vl_04}
 \input{Vorlesungen/vl_05}
 \input{Vorlesungen/vl_06}
@@ -111,6 +113,7 @@
 \input{Vorlesungen/vl_20}
 \input{Vorlesungen/vl_21}
 \input{Vorlesungen/vl_22}
+\input{Vorlesungen/vl_23}
 \clearpage
 \printindex
 \end{document}
