Neue Vorlesung hinzugefügt

--- a/gesamt.tex
+++ b/gesamt.tex
@@ -20,6 +20,8 @@
 \usepackage{amsthm} 
 %\usepackage[standard]{ntheorem}                            % Theorem-Umgebung
     \newtheorem{theorem}{Theorem}[section]
+    
+    \newtheorem*{Einschub}{Einschub}
 
     \newtheorem{Definition}{Definition}[section]
     \theoremstyle{definition}
@@ -114,6 +116,7 @@
 \input{Vorlesungen/vl_21}
 \input{Vorlesungen/vl_22}
 \input{Vorlesungen/vl_23}
+\input{Vorlesungen/vl_24}
 \clearpage
 \printindex
 \end{document}
