\primes durch Striche ersetzt

--- a/Vorlesungen/vl_24.tex
+++ b/Vorlesungen/vl_24.tex
@@ -141,7 +141,7 @@ Begriffe wie den Grenzwert und Stetigkeit untersuchen.
 	Metriken auf den Raum $Y= X_1 \times X_2 \times \hdots \times X_n$
 	Eine natürliche Metrik auf $Y$ ist gegeben durch:
 	\begin{align*}
-		d_+ (Y,Y\prime) = d_+ ((X_1, \hdots, X_n), (X_1\prime, \hdots, X_n\prime)) 
+		d_+ (Y,Y') = d_+ ((X_1, \hdots, X_n), (X_1', \hdots, X_n\prime)) 
 		= \sum_{i = 1}^n d_i(x_i,x_i\prime)
 	\end{align*}
 	Eine weitere natürliche Metrik auf $Y$ ist gegeben durch:
