--- a/Vorlesungen/vl_22.tex
+++ b/Vorlesungen/vl_22.tex
@@ -149,7 +149,7 @@ Konzepte:
 	$U$ für jedes $x \in U$ eine Umgebung ist.
 	Das heißt $U \subseteq X$ ist offen, wenn für alle $x \in U$ ein $r_x > 0$ 
 	existiert, mit $B_{r_x}(x) \subseteq U$. 
-	$A \subseteq X$ ist \emph{abgeschlossen}, wenn $X \ A$ offen ist. 
+	$A \subseteq X$ ist \emph{abgeschlossen}, wenn $X \setminus\ A$ offen ist. 
 }\end{Definition}
 
 \begin{Bemerkung}~
