--- a/Vorlesungen/vl_24.tex
+++ b/Vorlesungen/vl_24.tex
@@ -6,7 +6,7 @@ Begriffe wie den Grenzwert und Stetigkeit untersuchen.
 \begin{Definition}{%1
 	Seien $X,Y$ metrische Räume und $f: D \subseteq X \rightarrow Y$ sowie $p \in 
 	X$ ein Häufungspunkt von $D$.\\
-	Wir sagen $f$ hat an der Stelle $p$ den \emph{Grenzwert(GW)} $q \in Y$, wenn 
+	Wir sagen $f$ hat an der Stelle $p$ den \highl[Grenzwerk!metrischer Raum]{Grenzwert (GW)} $q \in Y$, wenn 
 	gilt:
 	\begin{align*}
 		\forall \epsilon > 0 \quad \exists \delta > 0  \quad \forall x 
@@ -163,12 +163,12 @@ Begriffe wie den Grenzwert und Stetigkeit untersuchen.
 		$$f: Y \rightarrow X_1 \times \hdots \times X_n$$ mit $y \mapsto (f_1(Y), \hdots, f_n(Y))$,
 		 wobei 
 	$f_i: Y \rightarrow X_i, \quad (i = 1, \hdots, n)$ sei. \\
-	Dann ist $f$ genau dann stetig in $p \in Y$ wenn $f_i \quad (i= 1, \hdots, n)$
+	Dann ist $f$ genau dann stetig in $p \in Y$ wenn $f_i$ für $i= 1, \hdots, n$
 	stetig in $p$ ist.
 }\end{Proposition}
 
 \begin{proof}
-	\glqq $f$ stetig $\Rightarrow f_i$ stetig\grqq{}:
+	\enquote{$f$ stetig $\Rightarrow f_i$ stetig}:
 	Sei $\epsilon > 0$ gegeben. Da $f$ stetig ist, existiert ein $\delta > 0$ mit:
 	\begin{align*}
 		d(f(x),f(p)) < \epsilon
