--- a/Diverses/mathe.tex
+++ b/Diverses/mathe.tex
@@ -15,7 +15,7 @@
 			%\usepackage{commath}
 %				\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 %				\DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
-%				\DeclarePairedDelimiter{\set}{\{}{\}}
+				\DeclarePairedDelimiter{\set}{\{}{\}}
 				
 			\usepackage{dsfont}
 			%\usepackage{mathrsfs}
