--- a/Vorlesungen/vl_24.tex
+++ b/Vorlesungen/vl_24.tex
@@ -6,7 +6,7 @@ Begriffe wie den Grenzwert und Stetigkeit untersuchen.
 \begin{Definition}{%1
 	Seien $X,Y$ metrische Räume und $f: D \subseteq X \rightarrow Y$ sowie $p \in 
 	X$ ein Häufungspunkt von $D$.\\
-	Wir sagen $f$ hat an der Stelle $p$ den \highl[Grenzwerk!metrischer Raum]{Grenzwert (GW)} $q \in Y$, wenn 
+	Wir sagen $f$ hat an der Stelle $p$ den \highl[Grenzwerk!metrischer Raum]{Grenzwert} (GW) $q \in Y$, wenn 
 	gilt:
 	\begin{align*}
 		\forall \epsilon > 0 \quad \exists \delta > 0  \quad \forall x 
@@ -112,8 +112,8 @@ Begriffe wie den Grenzwert und Stetigkeit untersuchen.
 
 \begin{Proposition}{\label{vl_24_prop_2}%6
 	Sei $X$ ein metrischer Raum und $f,g : X \rightarrow \IK$ stetig in $p \in X$. 
-	Dann sind auch $f + g$, $f \cdot g$  und - falls $g(x) \neq 0 \quad (x \in X)$ 
-	- $\frac{f}{g}$ stetig in $p$.
+	Dann sind auch $f + g$, $f \cdot g$  und -- falls $g(x) \neq 0 \quad (x \in X)$ 
+	-- $\frac{f}{g}$ stetig in $p$.
 }\end{Proposition}
 
 \begin{proof}
@@ -248,7 +248,7 @@ Abbildung
 wobei die Koeffizienten $c_{n_1,\hdots, n_d} \in \IK$ und die Summe endlich ist, 
 sind stetig. Analog sind rationale Funktionen, das heißt Abbildungen:
 \begin{align*}
-	F: \IK^d \setminus \IQ^{-1}(0) \rightarrow & \IK \\
+	F: \IK^d \setminus Q^{-1}(\set 0) \rightarrow & \IK \\
 	x \mapsto & \frac{P(x)}{Q(x)}
 \end{align*}
 wobei $P,Q$ Polynome sind, stetig.
