--- a/gesamt.tex
+++ b/gesamt.tex
@@ -8,15 +8,10 @@
 \usepackage{enumitem}
 	\newcommand{\subscript}[2]{$#1 _ #2$}
 \usepackage{tikz}
-\usepackage{todonotes}
-%funktioniert nur mit -shell-escape    
-    \usetikzlibrary{external}
-    \tikzexternalize[prefix=TikzPictures/]
-    \makeatletter
-        \renewcommand{\todo}[2][]{\tikzexternaldisable\@todo[#1]{#2}\tikzexternalenable}
-    \makeatother
+\usetikzlibrary{external}
 \usepackage{extarrows}
 \usepackage{physics}
+\usepackage{todonotes}
 \usepackage{csquotes}
 \usepackage{cases}
 \input{Diverses/mathe.tex}
@@ -123,6 +118,7 @@
 \input{Vorlesungen/vl_22}
 \input{Vorlesungen/vl_23}
 \input{Vorlesungen/vl_24}
+\input{Vorlesungen/vl_25}
 \clearpage
 \printindex
 \end{document}
